[gd_scene load_steps=17 format=3 uid="uid://c8pbiwko6sek6"]

[ext_resource type="PackedScene" uid="uid://b3vqcfw4hdg4j" path="res://Scenes/Characters/character.tscn" id="1_3etf2"]
[ext_resource type="Texture2D" uid="uid://d0s2ccf0c21ji" path="res://Assets/art/characters/player.png" id="2_40svl"]
[ext_resource type="Script" uid="uid://8kbkaad3xfks" path="res://Scripts/Characters/player.gd" id="2_al8ar"]
[ext_resource type="PackedScene" uid="uid://crwwq6vr37xh4" path="res://Scenes/Characters/enemy_slot.tscn" id="4_gy20a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_al8ar"]
radius = 2.0
height = 12.0

[sub_resource type="Animation" id="Animation_01b8d"]
resource_name = "Hurt"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [70, 71, 72]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}

[sub_resource type="Animation" id="Animation_40svl"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1010205, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_25bbb"]
resource_name = "Kick"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [41, 42, 43]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageEmitter:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cqrjx"]
resource_name = "Punch"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [21, 22]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageEmitter:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_fcmex"]
resource_name = "Punch_alt"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [31, 32]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageEmitter:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_al8ar"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageEmitter:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cueqf"]
resource_name = "Roundkick"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [51, 52]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageEmitter:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}

[sub_resource type="Animation" id="Animation_gy20a"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_al8ar"]
_data = {
&"Hurt": SubResource("Animation_01b8d"),
&"Idle": SubResource("Animation_40svl"),
&"Kick": SubResource("Animation_25bbb"),
&"Punch": SubResource("Animation_cqrjx"),
&"Punch_alt": SubResource("Animation_fcmex"),
&"RESET": SubResource("Animation_al8ar"),
&"Roundkick": SubResource("Animation_cueqf"),
&"Walk": SubResource("Animation_gy20a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40svl"]
size = Vector2(13, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al8ar"]
size = Vector2(12, 16)

[node name="Player" instance=ExtResource("1_3etf2")]
collision_layer = 2
collision_mask = 137
script = ExtResource("2_al8ar")
max_health = 30
damage_power = 6
jump_intensity = 150.0
can_respawn = true

[node name="CharacterSprite" parent="." index="1"]
texture = ExtResource("2_40svl")
centered = false
offset = Vector2(-24, -48)
hframes = 10
vframes = 10

[node name="CollisionShape2D" parent="." index="2"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_al8ar")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_al8ar")
}
autoplay = "Idle"

[node name="DamageEmitter" parent="." index="4"]
position = Vector2(0, -12)
collision_mask = 96

[node name="CollisionShape2D" parent="DamageEmitter" index="0"]
position = Vector2(16, -6)
shape = SubResource("RectangleShape2D_40svl")

[node name="DamageReceiver" parent="." index="5"]
position = Vector2(0, -18)
collision_layer = 16

[node name="CollisionShape2D" parent="DamageReceiver" index="0"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_al8ar")

[node name="EnemySlots" type="Node2D" parent="." index="6"]

[node name="EnemySlot" parent="EnemySlots" index="0" instance=ExtResource("4_gy20a")]
position = Vector2(16, 3)

[node name="EnemySlot2" parent="EnemySlots" index="1" instance=ExtResource("4_gy20a")]
position = Vector2(16, -2)

[node name="EnemySlot3" parent="EnemySlots" index="2" instance=ExtResource("4_gy20a")]
position = Vector2(-14, 3)

[node name="EnemySlot4" parent="EnemySlots" index="3" instance=ExtResource("4_gy20a")]
position = Vector2(-15, 0)

[editable path="DamageEmitter"]
[editable path="DamageReceiver"]
[editable path="CollateralDamageEmitter"]
